[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/level/PlayerSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/slider/Slider.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level editor/00_test/Level0-0.gd" type="Script" id=4]
[ext_resource path="res://Level editor/00_test/info.tres" type="Resource" id=5]
[ext_resource path="res://levels/tutorial/00/lightmap/lightmap.lmbake" type="BakedLightmapData" id=6]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/doors/DoorSingle.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/screen/WideScreen.tscn" type="PackedScene" id=15]

[sub_resource type="GDScript" id=332]
script/source = "# Door source code

extends Door


# Nothing here

"

[node name="Level0" type="Spatial"]
script = ExtResource( 4 )
level_info = ExtResource( 5 )
slider = NodePath("Slider")
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")

[node name="Slider" parent="." instance=ExtResource( 3 )]

[node name="Map" parent="." instance=ExtResource( 1 )]
data = {
"cells": PoolIntArray( 5, 0, 1075183627, 65529, 0, 1074790411, 0, 1, 1074790404, 2, 1, 1074790400, 4, 1, 1074397189, 65530, 1, 1073741829, 65532, 1, 1074790400, 65534, 1, 1074790404, 262144, 1, 1074921496, 262146, 1, 1074921497, 262148, 1, 1074921497, 327674, 1, 1074921497, 327676, 1, 1074921497, 327678, 1, 1074921495, 5, 2, 1075183648, 65529, 2, 1074790432, 0, 3, 1074790400, 2, 3, 1074790400, 4, 3, 1074397189, 65530, 3, 1073741829, 65532, 3, 1074790400, 65534, 3, 1074790400, 262144, 3, 1074921497, 262146, 3, 1074921497, 262148, 3, 1074921497, 327674, 3, 1074921497, 327676, 3, 1074921497, 327678, 3, 1074921497, 5, 4, 1075183623, 65529, 4, 1074790407, 0, 5, 1074790405, 2, 5, 1074790405, 4, 5, 1074397186, 65530, 5, 1074790402, 65532, 5, 1074790405, 65534, 5, 1074790405, 262144, 5, 1074921497, 262146, 5, 1074921497, 262148, 5, 1074921497, 327674, 5, 1074921497, 327676, 5, 1074921497, 327678, 5, 1074921497, 1, 6, 1074397216, 3, 6, 1074397199, 5, 6, 1074397215, 65529, 6, 1074397215, 65531, 6, 1074397199, 65533, 6, 1074397216, 65535, 6, 1074397221, 65535, 7, 1074397226, 1, 65516, 1075183649, 65533, 65516, 1075183649, 65535, 65516, 1073741861, 0, 65517, 1074397187, 262144, 65517, 1074921497, 327678, 65517, 1074921497, 1, 65518, 1075183623, 65533, 65518, 1074790407, 0, 65519, 1074397187, 262144, 65519, 1074921501, 327678, 65519, 1074921501, 1, 65520, 1075183648, 65533, 65520, 1074790432, 0, 65521, 1074397187, 262144, 65521, 1074921497, 327678, 65521, 1074921497, 1, 65522, 1075183625, 65533, 65522, 1074790409, 0, 65523, 1074397187, 262144, 65523, 1074921497, 327678, 65523, 1074921497, 1, 65524, 1075183648, 65533, 65524, 1074790432, 0, 65525, 1074397187, 262144, 65525, 1074921497, 327678, 65525, 1074921497, 1, 65526, 1075183623, 65533, 65526, 1074790407, 0, 65527, 1074397187, 262144, 65527, 1074921497, 327678, 65527, 1074921497, 1, 65528, 1075183649, 65533, 65528, 1075183649, 65535, 65528, 1074397219, 1, 65530, 1075183649, 3, 65530, 1073741836, 5, 65530, 1074397215, 65529, 65530, 1074397215, 65531, 65530, 1073741836, 65533, 65530, 1075183649, 65535, 65530, 1073741860, 0, 65531, 1075183621, 2, 65531, 1075183621, 4, 65531, 1075183618, 65530, 65531, 1073741826, 65532, 65531, 1075183621, 65534, 65531, 1075183621, 262144, 65531, 1074921497, 262146, 65531, 1074921497, 262148, 65531, 1074921497, 327674, 65531, 1074921497, 327676, 65531, 1074921497, 327678, 65531, 1074921497, 5, 65532, 1075183623, 65529, 65532, 1074790407, 0, 65533, 1074790400, 2, 65533, 1074790400, 4, 65533, 1074397189, 65530, 65533, 1073741829, 65532, 65533, 1074790400, 65534, 65533, 1074790400, 262144, 65533, 1074921497, 262146, 65533, 1074921497, 262148, 65533, 1074921497, 327674, 65533, 1074921497, 327676, 65533, 1074921497, 327678, 65533, 1074921497, 5, 65534, 1075183648, 65529, 65534, 1074790432, 0, 65535, 1074790404, 2, 65535, 1074790400, 4, 65535, 1074397189, 65530, 65535, 1073741829, 65532, 65535, 1074790400, 65534, 65535, 1074790404, 262144, 65535, 1074921495, 262146, 65535, 1074921497, 262148, 65535, 1074921497, 327674, 65535, 1074921497, 327676, 65535, 1074921497, 327678, 65535, 1074921496 )
}

[node name="PlayerSpawner" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2, 6 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3.10443, 0.5 )
omni_range = 10.0

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3.10443, -13.2854 )
omni_range = 8.0

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2.65266, -6.41946 )
extents = Vector3( 8, 3.5, 16 )
quality = 0
use_hdr = false
use_color = false
capture_quality = 0
light_data = ExtResource( 6 )

[node name="Door" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.495384, 0.5, -5.593 )
code = SubResource( 332 )
display_name = "Door"
description = "Try to open this door to exit the room"
is_programmable = true
locked = true

[node name="ScreenItem" parent="." instance=ExtResource( 15 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.8, 3.3, -4.666 )
visible = false
constant_linear_velocity = Vector3( 0, 2.5, 0 )

[node name="ScreenItem2" parent="." instance=ExtResource( 15 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.8, 2.5, -3.59204 )
visible = false
constant_linear_velocity = Vector3( 0, 2.5, 0 )

[node name="PC" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.558645, 0.5, 0.596323 )
display_name = "Computer"
description = "Use this computer to programme objects"
is_interactable = true

[node name="DoorSingle" parent="." instance=ExtResource( 14 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.5, 0.5, -20.4333 )
display_name = "ExitDoor"
description = "Open to complete the level"
is_interactable = true
interaction_message = "Open"

[node name="ButtonLoopTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Spatial" type="Spatial" parent="."]

[connection signal="hidden" from="Slider" to="." method="_on_Slider_hidden"]
[connection signal="opened" from="Door" to="." method="_on_Door_opened"]
[connection signal="started_coding" from="PC" to="." method="_on_PC_started_coding" flags=6]
[connection signal="interact" from="DoorSingle" to="." method="_on_DoorSingle_interact"]
[connection signal="timeout" from="ButtonLoopTimer" to="." method="_on_ButtonLoopTimer_timeout"]
